Some updates add path accepting to Button renaming all components and pages to index

--- a/src/components/Title/title.module.css
+++ b/src/components/Title/title.module.css
@@ -1,8 +1,12 @@
 @import url("../../styles/colors.css");
 
-h1 {
+h1{
   color: var(--color-primary);
   display: inline;
+}
+
+h1.big {
+  font-size: 3rem;
 }
 
 h1 span {
