--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -1,4 +1,8 @@
-* {
+@import url("./colors.css");
+
+*,
+::before,
+::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -7,7 +11,13 @@
 html {
   overflow-x: hidden;
   font-family: sans-serif;
+  color: var(--text-primary);
   font-size: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-primary);
 }
 
 .nav {
