Add scroll behavior to navbar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   border-radius: 1rem;
+  width: 600px;
   left: 50%;
   transform: translateX(-50%);
   box-shadow: 0 0 1rem var(--color-primary-shadow);
@@ -14,6 +15,12 @@ nav {
   min-width: 650px;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
+  transition: 0.3s ease all;
+}
+
+nav.scrolled {
+  margin: 0;
+  width: 100vw;
 }
 
 .navitems {
