--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,6 @@
 @import url("../../styles/colors.css");
 
-button {
+.button {
   display: inline;
   padding: 0.75rem;
   border: none;
@@ -13,6 +13,6 @@ button {
   font-size: 1rem;
 }
 
-button:hover {
+.button:hover {
   box-shadow: 0 0 1.5rem -0.25rem var(--color-primary);
 }
