--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -223,6 +223,77 @@
 }
 /* End Invitation section */
 
+/* Faqs section */
+.faqsMain {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5rem;
+  padding: 5rem;
+}
+
+.faqsMain .faqsList {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 600px;
+}
+
+.faqsMain .faqsList .faq {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0;
+  border-radius: 1rem;
+  position: relative;
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+
+.faqsMain .faqsList .faq:hover {
+  background: var(--color-primary-shadow);
+}
+
+.faqsMain .faqsList .faq.opened {
+  gap: 0.5rem;
+}
+
+.faqsMain .faqsList .faq .faqQuestion {
+  font-size: 1.25rem;
+  position: relative;
+  padding: 0 2rem 0 0;
+}
+
+.faqsMain .faqsList .faq .faqQuestion button {
+  position: absolute;
+  height: 2rem;
+  width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  border: none;
+  outline: none;
+  right: 0;
+  top: 0;
+  font-size: 2rem;
+}
+
+.faqsMain .faqsList .faq .faqAnswer {
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: 0.3s ease all;
+}
+
+.faqsMain .faqsList .faq.opened .faqAnswer {
+  height: auto;
+  opacity: 1;
+}
+/* End Faqs section */
+
 /* Keyframes */
 @keyframes scroll {
   0% {
