--- a/src/pages/NotFound/Notfound.module.css
+++ b/src/pages/NotFound/Notfound.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
-  min-height: 100vh;
+  height: calc(100vh - 125px);
   width: 100vw;
 }
 
