Add new features now title supports soBig size now title can be not-clickable

--- a/src/components/Title/title.module.css
+++ b/src/components/Title/title.module.css
@@ -9,6 +9,14 @@
   font-size: 3rem;
 }
 
+.titleHeading.titleSoBig {
+  font-size: 5rem;
+}
+
+.titleHeading.titleDark {
+  color: #ffffff;
+}
+
 .titleHeading .titleSubheading {
   color: rgb(0, 204, 68);
 }
