--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,5 +1,6 @@
 * {
   --color-primary: rgb(0, 68, 255);
   --color-primary-shadow: rgba(0, 68, 255, 0.25);
+  --color-secondary: rgb(0, 204, 68);
   --text-primary: rgb(0, 34, 128);
 }
