--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
 
 nav {
   padding: 0.75rem 2rem;
-  margin: 1rem;
+  margin: 1rem 0 0 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,11 +10,11 @@ nav {
   width: 600px;
   left: 50%;
   transform: translateX(-50%);
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
   box-shadow: 0 0 1rem var(--color-primary-shadow);
   position: fixed;
   min-width: 650px;
-  background: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(10px);
   transition: 0.3s ease all;
   z-index: 100;
 }
@@ -23,6 +23,74 @@ nav.scrolled {
   margin: 0;
   width: 100vw;
   border-radius: 0;
+}
+
+.navHamburger {
+  position: absolute;
+  display: none;
+  width: 1.5rem;
+  height: 2px;
+  background: var(--color-primary);
+  left: 45%;
+  transform: translateX(-50%);
+  transition: 0.3s ease all;
+}
+
+.navHamburger::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -0.5rem;
+  background: var(--color-primary);
+  transition: 0.3s ease all;
+}
+
+.navHamburger::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: -0.5rem;
+  background: var(--color-primary);
+  transition: 0.3s ease all;
+}
+
+.navHamburger.opened {
+  background: transparent;
+}
+
+.navHamburger.opened::before {
+  transform: rotate(45deg);
+  top: 0;
+}
+
+.navHamburger.opened::after {
+  transform: rotate(-45deg);
+  bottom: 0;
+}
+
+.navDropdown {
+  position: absolute;
+  padding: 2rem;
+  width: 200px;
+  font-size: 1.25rem;
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem var(--color-primary-shadow);
+  opacity: 0;
+  top: -11rem;
+  transition: 0.3s ease all;
+  left: 45%;
+  transform: translateX(-50%);
+}
+
+.navDropList {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .navitems {
@@ -46,3 +114,31 @@ nav.scrolled {
   color: #ffffff;
   cursor: pointer;
 }
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+  nav {
+    width: 90%;
+    min-width: unset;
+  }
+
+  nav.scrolled {
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .navHamburger {
+    display: unset;
+  }
+
+  .navDropdown.show {
+    opacity: 1;
+    top: 4.5rem;
+  }
+
+  .navitems {
+    display: none;
+  }
+}
+/* End Responsive */
