--- a/src/pages/Report/Report.module.css
+++ b/src/pages/Report/Report.module.css
@@ -69,7 +69,7 @@
 
 .annualReports {
   width: 100%;
-  padding: 3rem;
+  padding: 3rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -179,3 +179,21 @@
   }
 }
 /* End Keyframes */
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+  .annualHeader {
+    height: 80vh;
+  }
+
+  .annualGrid {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .reportWrapper {
+    width: 90vw;
+  }
+}
+/* End Responsive */
