--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,7 @@ html {
   overflow-x: hidden;
   font-family: sans-serif;
   color: var(--text-primary);
+  scroll-behavior: smooth;
   font-size: 15px;
 }
 
